Raunak | Timer changes implemented for test mic

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -210,8 +210,12 @@
 	"Test your Microphone and Speakers": "আপনার মাইক্রোফোন এবং স্পিকার পরীক্ষা করুন",
 	"Test mic": "মাইক পরীক্ষা করুন",
 	"Test Speakers": "স্পিকার পরীক্ষা করুন",
-	"Recording": "রেকর্ডিং",
-	"Playing": "শুরু হয়েছে",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 second",
+	"Playingback Audio": "Playingback Audio",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "সামনের ধাপে এগিয়ে গিয়ে আপনি <a href=\"/terms-and-conditions\">শর্তাবলী</a> সম্মত হলেন",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
