--- a/locales/mr.json
+++ b/locales/mr.json
@@ -164,8 +164,12 @@
 	"Test your Microphone and Speakers": "तुमच्या मायक्रोफोन आणि स्पीकर्सची चाचणी करा",
 	"Test mic": "माईकची चाचणी करा",
 	"Test Speakers": "स्पीकरची चाचणी करा",
-	"Recording": "ध्वनिमुद्रण",
-	"Playing": "वाजत आहे",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 second",
+	"Playingback Audio": "Playingback Audio",
 	"Help your own language": "तुमच्या स्वतःच्या भाषेला सहाय्य करा",
 	"Quick Tips": "जाता जाता सूचना",
 	"Read once <b>before recording it</b>": "ध्वनिमुद्रित करण्यापूर्वी ते वाचा",
