--- a/locales/pa.json
+++ b/locales/pa.json
@@ -166,8 +166,12 @@
 	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫ਼ੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Speakers": "ਸਪੀਕਰ ਦੀ ਜਾਂਚ ਕਰੋ",
-	"Recording": "ਰਿਕਾਰਡ ਕੀਤਾ ਜਾ ਰਿਹਾ ਹੈ",
-	"Playing": "ਚਲਾਇਆ ਜਾ ਰਿਹਾ ਹੈ",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 second",
+	"Playingback Audio": "Playingback Audio",
 	"More Languages":"ਹੋਰ ਭਾਸ਼ਾਵਾਂ",
 	"Other Languages":"ਦੂਜੀਆਂ ਭਾਸ਼ਾਵਾਂ",
 	"Get comfortable with the text before recording":"ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਲਿਖਤ ਨੂੰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਪੜ੍ਹ ਅਤੇ ਸਮਝ ਲਓ",
