--- a/locales/gu.json
+++ b/locales/gu.json
@@ -172,8 +172,12 @@
 	"Test your Microphone and Speakers": "તમારો માઈક્રોફોન અને સ્પીકર્સ ટેસ્ટ કરો",
 	"Test mic": "માઈક ટેસ્ટ કરો",
 	"Test Speakers": "સ્પીકર ટેસ્ટ કરો",
-	"Recording": "રેેકોર્ડિંગ",
-	"Playing": "ચાલી રહ્યું છે",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 second",
+	"Playingback Audio": "Playingback Audio",
 	"You are a champion": "તમે વિજેતા છો",
 	"WooHoo!! You took the first important step": "વાહ ! તમે પહેલો મહત્વપૂર્ણ પડાવ લીધો",
 	"recordings contributed": "recordings contributed",
