--- a/locales/kn.json
+++ b/locales/kn.json
@@ -157,7 +157,11 @@
 	"Test your Microphone and Speakers": "ನಿಮ್ಮ ಮೈಕ್ರೊಫೋನ್ ಮತ್ತು ಧ್ವನಿವರ್ಧಕಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
 	"Test mic": "ಮೈಕ್ ಪರೀಕ್ಷಿಸಿ",
 	"Test Speakers": "ಧ್ವನಿವರ್ಧಕವನ್ನು ಪರೀಕ್ಷಿಸಿ",
-	"Recording": "ರೆಕಾರ್ಡಿಂಗ್",
-	"Playing": "ನುಡಿಸುವಿಕೆ",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 second",
+	"Playingback Audio": "Playingback Audio",
 	"Help your own language": "ನಿಮ್ಮ ಸ್ವಂತ ಭಾಷೆಗೆ ಸಹಾಯ ಮಾಡಿ"
 }
