--- a/locales/or.json
+++ b/locales/or.json
@@ -163,8 +163,12 @@
 	"Test your Microphone and Speakers": "ଆପଣଙ୍କର ମାଇକ୍ରୋଫୋନ୍ ଓ ସ୍ପିକର ଯାଞ୍ଚ କରନ୍ତୁ",
 	"Test mic": "ମାଇକ୍ ଟେଷ୍ଟ କରନ୍ତୁ",
 	"Test Speakers": "ସ୍ପିକର ଟେଷ୍ଟ କରନ୍ତୁ",
-	"Recording": "ରେକର୍ଡ଼ିଂ କରନ୍ତୁ",
-	"Playing": "ପ୍ଲେ ହେଉଛି",
+	"Recording for 5 seconds": "Recording for 5 seconds",
+	"Recording for 4 seconds": "Recording for 4 seconds",
+	"Recording for 3 seconds": "Recording for 3 seconds",
+	"Recording for 2 seconds": "Recording for 2 seconds",
+	"Recording for 1 seconds": "Recording for 1 second",
+	"Playingback Audio": "Playingback Audio",
 	"Help your own language": "ନିଜ ଭାଷାରେ ସହାୟତା କରନ୍ତୁ",
 	"Quick Tips": "କୁଇକ୍ ଟିପ୍\u200Cସ",
 	"Transgender - He": "Transgender - He",
