Raunak | Test mic playing translations

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -159,6 +159,7 @@
 	"Recording for 2 seconds": "अगले 2 सेकंड में रिकॉर्ड करें",
 	"Recording for 1 seconds": "अगले 1 सेकंड में रिकॉर्ड करें",
 	"Playingback Audio": "वापस सुना रहे हैं",
+	"Playing": "प्लेइंग",
 	"You are a champion": "You are a champion",
 	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
 	"recordings contributed": "recordings contributed",
