--- a/locales/as.json
+++ b/locales/as.json
@@ -202,6 +202,7 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "বজাওক",
 	"You are a champion": "আপুনি এজন চেম্পিয়ন",
 	"WooHoo!! You took the first important step": "অ' হ' !!! আপুনি প্ৰথম প্ৰয়োজনীয় কদম উঠালেই",
 	"recordings contributed": "ৰেকৰ্ডিংৰ যোগদান হ'ল",
