--- a/locales/bn.json
+++ b/locales/bn.json
@@ -216,6 +216,7 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "শুরু হয়েছে",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "সামনের ধাপে এগিয়ে গিয়ে আপনি <a href=\"/terms-and-conditions\">শর্তাবলী</a> সম্মত হলেন",
 	"Transgender - He": "Transgender - He",
 	"Transgender - She": "Transgender - She",
