--- a/locales/en.json
+++ b/locales/en.json
@@ -195,6 +195,7 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "Playing",
 	"Quick Tips": "Quick Tips",
 	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
 	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
