--- a/locales/gu.json
+++ b/locales/gu.json
@@ -178,6 +178,7 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "ચાલી રહ્યું છે",
 	"You are a champion": "તમે વિજેતા છો",
 	"WooHoo!! You took the first important step": "વાહ ! તમે પહેલો મહત્વપૂર્ણ પડાવ લીધો",
 	"recordings contributed": "recordings contributed",
