--- a/locales/kn.json
+++ b/locales/kn.json
@@ -163,5 +163,6 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "ನುಡಿಸುವಿಕೆ",
 	"Help your own language": "ನಿಮ್ಮ ಸ್ವಂತ ಭಾಷೆಗೆ ಸಹಾಯ ಮಾಡಿ"
 }
