--- a/locales/or.json
+++ b/locales/or.json
@@ -169,6 +169,7 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "ପ୍ଲେ ହେଉଛି",
 	"Help your own language": "ନିଜ ଭାଷାରେ ସହାୟତା କରନ୍ତୁ",
 	"Quick Tips": "କୁଇକ୍ ଟିପ୍\u200Cସ",
 	"Transgender - He": "Transgender - He",
