--- a/locales/pa.json
+++ b/locales/pa.json
@@ -172,30 +172,44 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
-	"More Languages":"ਹੋਰ ਭਾਸ਼ਾਵਾਂ",
-	"Other Languages":"ਦੂਜੀਆਂ ਭਾਸ਼ਾਵਾਂ",
-	"Get comfortable with the text before recording":"ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਲਿਖਤ ਨੂੰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਪੜ੍ਹ ਅਤੇ ਸਮਝ ਲਓ",
-	"WooHoo!! You took the first important step":"ਬੱਲੇ! ਤੁਸੀਂ ਪਹਿਲਾ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਕਦਮ ਚੁੱਕਿਆ",
-	"'x' Recordings contributed":"\"x\" ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ",
-	"You are just 'x' sentences away from earning the Bronze Badge.":"ਤੁਸੀਂ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
-	"You are just 'x' sentences away from earning the Silver Badge.":"ਤੁਸੀਂ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
-	"You are just 'x' sentences away from earning the Gold Badge.":"ਤੁਸੀਂ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
-	"You are just 'x' sentences away from earning the Platinum Badge.":"ਤੁਸੀਂ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
-	"You are a champion":"ਤੁਸੀਂ ਵਿਜੇਤਾ ਹੋ",
-	"Bronze":"ਬਰੌਨਜ਼",
-	"Silver":"ਸਿਲਵਰ",
-	"Gold":"ਗੋਲਡ",
-	"Platinum":"ਪਲੈਟੀਨਮ",
-	"Download":"ਡਾਊਨਲੋਡ ਕਰੋ",
-	"You are on a spree!":"ਮੈਂ ਕਿਹਾ ਜੀ ਕਮਾਲ ਹੀ ਕਮਾਲ!",
-	"You are driving the spirit of your language":"ਤੁਸੀਂ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਿਖਰ ਤੱਕ ਲਿਜਾ ਰਹੇ ਹੋ",
-	"Woaah! You've earned your Bronze badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
-	"Woaah! You've earned your Silver badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
-	"Woaah! You've earned your Gold badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
-	"Woaah! You've earned your Platinum badge":"ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
-	"We love your spirit when you take the charge":"ਅਸੀਂ ਤੁਹਾਡੇ ਕੰਮ ਕਰਨ ਦੇ ਤਰੀਕੇ ਦੇ ਦੀਵਾਨੇ ਹਾਂ",
-	"You are in control, lead the way":"ਕਮਾਨ ਤੁਹਾਡੇ ਹੱਥ ਵਿੱਚ ਹੈ, ਸਾਡੀ ਅਗਵਾਈ ਕਰੋ",
+	"Playing": "ਚਲਾਇਆ ਜਾ ਰਿਹਾ ਹੈ",
+	"More Languages": "ਹੋਰ ਭਾਸ਼ਾਵਾਂ",
+	"Other Languages": "ਦੂਜੀਆਂ ਭਾਸ਼ਾਵਾਂ",
+	"Get comfortable with the text before recording": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਲਿਖਤ ਨੂੰ ਚੰਗੀ ਤਰ੍ਹਾਂ ਪੜ੍ਹ ਅਤੇ ਸਮਝ ਲਓ",
+	"WooHoo!! You took the first important step": "ਬੱਲੇ! ਤੁਸੀਂ ਪਹਿਲਾ ਸਭ ਤੋਂ ਮਹੱਤਵਪੂਰਨ ਕਦਮ ਚੁੱਕਿਆ",
+	"'x' Recordings contributed": "\"x\" ਰਿਕਾਰਡਿੰਗਾਂ ਦਾ ਯੋਗਦਾਨ ਕੀਤਾ ਗਿਆ",
+	"You are just 'x' sentences away from earning the Bronze Badge.": "ਤੁਸੀਂ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are just 'x' sentences away from earning the Silver Badge.": "ਤੁਸੀਂ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are just 'x' sentences away from earning the Gold Badge.": "ਤੁਸੀਂ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are just 'x' sentences away from earning the Platinum Badge.": "ਤੁਸੀਂ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰਨ ਤੋਂ ਸਿਰਫ਼ 'x' ਵਾਕ ਦੂਰ ਹੋ।",
+	"You are a champion": "ਤੁਸੀਂ ਵਿਜੇਤਾ ਹੋ",
+	"Bronze": "ਬਰੌਨਜ਼",
+	"Silver": "ਸਿਲਵਰ",
+	"Gold": "ਗੋਲਡ",
+	"Platinum": "ਪਲੈਟੀਨਮ",
+	"Download": "ਡਾਊਨਲੋਡ ਕਰੋ",
+	"You are on a spree!": "ਮੈਂ ਕਿਹਾ ਜੀ ਕਮਾਲ ਹੀ ਕਮਾਲ!",
+	"You are driving the spirit of your language": "ਤੁਸੀਂ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਿਖਰ ਤੱਕ ਲਿਜਾ ਰਹੇ ਹੋ",
+	"Woaah! You've earned your Bronze badge": "ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਬਰੌਨਜ਼ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"Woaah! You've earned your Silver badge": "ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਸਿਲਵਰ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"Woaah! You've earned your Gold badge": "ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਗੋਲਡ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"Woaah! You've earned your Platinum badge": "ਵਾਹ! ਤੁਸੀਂ ਆਪਣਾ ਪਲੈਟੀਨਮ ਬੈਜ ਹਾਸਲ ਕਰ ਲਿਆ",
+	"We love your spirit when you take the charge": "ਅਸੀਂ ਤੁਹਾਡੇ ਕੰਮ ਕਰਨ ਦੇ ਤਰੀਕੇ ਦੇ ਦੀਵਾਨੇ ਹਾਂ",
+	"You are in control, lead the way": "ਕਮਾਨ ਤੁਹਾਡੇ ਹੱਥ ਵਿੱਚ ਹੈ, ਸਾਡੀ ਅਗਵਾਈ ਕਰੋ",
 	"Spread the word. Share it with your friends and family.": "ਇਸ ਬਾਰੇ ਸਭ ਨੂੰ ਦੱਸੋ। ਆਪਣੇ ਦੋਸਤਾਂ ਅਤੇ ਪਰਿਵਾਰ ਨਾਲ ਇਸ ਨੂੰ ਸਾਂਝਾ ਕਰੋ।",
 	"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great lingusitic applications. Our <x> language ranks <y> on boloindia. Do your bit and empower the language?": "ਮੈਂ https://boloindia.nplt.in 'ਤੇ ਭਾਰਤ ਲਈ ਭਾਸ਼ਾਵਾਂ ਦੇ ਖੁੱਲੇ ਸਰੋਤ ਦੇ ਭੰਡਾਰ ਨੂੰ ਬਣਾਉਣ ਵਿੱਚ ਆਪਣਾ ਯੋਗਦਾਨ ਪਾਇਆ। ਮੈਂ ਅਤੇ ਤੁਸੀਂ ਆਪਣੀਆਂ ਅਵਾਜ਼ਾਂ ਦਾ ਯੋਗਦਾਨ ਕਰਕੇ ਮਸ਼ੀਨਾਂ ਨੂੰ ਸਾਡੀਆਂ ਭਾਸ਼ਾਵਾਂ ਸਿੱਖਣ ਅਤੇ ਬਿਹਤਰੀਨ ਭਾਸ਼ਾਈ ਐਪਲੀਕੇਸ਼ਨਾਂ ਰਾਹੀਂ ਸਾਡੇ ਨਾਲ ਗੱਲਬਾਤ ਕਰਨ ਵਿੱਚ ਮਦਦ ਕਰ ਸਕਦੇ ਹਾਂ। ਸਾਡੀ <x> ਭਾਸ਼ਾ boloindia 'ਤੇ <y> ਦਰਜੇ 'ਤੇ ਹੈ। ਕੀ ਤੁਸੀਂ ਯੋਗਦਾਨ ਪਾ ਕੇ ਆਪਣੀ ਭਾਸ਼ਾ ਨੂੰ ਸਸ਼ਕਤ ਬਣਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ?",
-	"Help your own language": "ਆਪਣੀ ਖੁਦ ਦੀ ਭਾਸ਼ਾ ਦੀ ਮਦਦ ਕਰੋ"
+	"Help your own language": "ਆਪਣੀ ਖੁਦ ਦੀ ਭਾਸ਼ਾ ਦੀ ਮਦਦ ਕਰੋ",
+	"Report": "Report",
+	"Report Content": "Report Content",
+	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
+	"Offensive": "Offensive",
+	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
+	"Prohibited Content": "Prohibited Content",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
+	"Political Statement": "Political Statement",
+	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
+	"Misinformation": "Misinformation",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
+	"Thank You": "Thank You",
+	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us."
 }
