--- a/locales/ta.json
+++ b/locales/ta.json
@@ -181,6 +181,7 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "வாசிக்கப்படுகிறது",
 	"Recorded": "பதிவுசெய்யப்பட்டது",
 	"Validated": "சரிபார்க்கப்பட்டது",
 	"Contributed": "பங்களிக்கப்பட்டது",
