--- a/locales/te.json
+++ b/locales/te.json
@@ -154,5 +154,6 @@
 	"Recording for 2 seconds": "Recording for 2 seconds",
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
+	"Playing": "ప్లే అవుతోంది",
 	"Help your own language": "మీ స్వంత భాష సహాయం"
 }
