Raunak + Priyanshu | Test Mic translation update

--- a/locales/as.json
+++ b/locales/as.json
@@ -194,7 +194,7 @@
 	"Quick Tips": "দ্ৰুত পৰামৰ্শ",
 	"Read once <b>before recording it</b>": "<b>ৰেকৰ্ডিং কৰাৰ আগতে </b>এবাৰ পঢ়ি লওক",
 	"Test your Microphone and Speakers": "আপোনাৰ মাইক্ৰফেোন আৰু স্পীকাৰ পৰীক্ষা কৰক",
-	"Test mic": "মাইক্ৰফোন পৰীক্ষা কৰক",
+	"Test Mic": "মাইক্ৰফোন পৰীক্ষা কৰক",
 	"Test Speakers": "স্পীকাৰ পৰীক্ষা কৰক",
 	"Recording for 5 seconds": "Recording for 5 seconds",
 	"Recording for 4 seconds": "Recording for 4 seconds",
