--- a/locales/bn.json
+++ b/locales/bn.json
@@ -208,7 +208,7 @@
 	"You are just 'x' sentences away from earning the Gold Badge.": "সোনা ব্যাজ উপার্জন থেকে আপনি 'এক্স' বাক্য দূরে রয়েছেন।",
 	"You are just 'x' sentences away from earning the Platinum Badge.": "প্ল্যাটিনাম ব্যাজ উপার্জন থেকে আপনি কেবল 'এক্স' বাক্য দূরে রয়েছেন।",
 	"Test your Microphone and Speakers": "আপনার মাইক্রোফোন এবং স্পিকার পরীক্ষা করুন",
-	"Test mic": "মাইক পরীক্ষা করুন",
+	"Test Mic": "মাইক পরীক্ষা করুন",
 	"Test Speakers": "স্পিকার পরীক্ষা করুন",
 	"Recording for 5 seconds": "Recording for 5 seconds",
 	"Recording for 4 seconds": "Recording for 4 seconds",
