--- a/locales/gu.json
+++ b/locales/gu.json
@@ -170,7 +170,7 @@
 	"Quick Tips": "ઝડપી ટિપ્સ",
 	"Read once <b>before recording it</b>": "તેને રેકોર્ડ કરતાં પહેલાં એક વખત વાંચો",
 	"Test your Microphone and Speakers": "તમારો માઈક્રોફોન અને સ્પીકર્સ ટેસ્ટ કરો",
-	"Test mic": "માઈક ટેસ્ટ કરો",
+	"Test Mic": "માઈક ટેસ્ટ કરો",
 	"Test Speakers": "સ્પીકર ટેસ્ટ કરો",
 	"Recording for 5 seconds": "Recording for 5 seconds",
 	"Recording for 4 seconds": "Recording for 4 seconds",
