--- a/locales/kn.json
+++ b/locales/kn.json
@@ -155,7 +155,7 @@
 	"Quick Tips": "ತ್ವರಿತ ಸಲಹೆಗಳು",
 	"Read once <b>before recording it</b>": "ರೆಕಾರ್ಡ್ ಮಾಡುವ ಮೊದಲು ಒಮ್ಮೆ ಅದನ್ನು ಓದಿ",
 	"Test your Microphone and Speakers": "ನಿಮ್ಮ ಮೈಕ್ರೊಫೋನ್ ಮತ್ತು ಧ್ವನಿವರ್ಧಕಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
-	"Test mic": "ಮೈಕ್ ಪರೀಕ್ಷಿಸಿ",
+	"Test Mic": "ಮೈಕ್ ಪರೀಕ್ಷಿಸಿ",
 	"Test Speakers": "ಧ್ವನಿವರ್ಧಕವನ್ನು ಪರೀಕ್ಷಿಸಿ",
 	"Recording for 5 seconds": "Recording for 5 seconds",
 	"Recording for 4 seconds": "Recording for 4 seconds",
