--- a/locales/ml.json
+++ b/locales/ml.json
@@ -147,7 +147,7 @@
 	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> റെക്കോർഡിംഗുകൾ സാധൂകരിച്ചതിന് നന്ദി",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "മുന്നോട്ട് പോകുന്നതിലൂടെ, നിങ്ങൾ <a href=\"/terms-and-conditions\">നിബന്ധനകളും വ്യവസ്ഥകളും</a> അംഗീകരിക്കുന്നു",
 	"Test your Microphone and Speakers": "നിങ്ങളുടെ മൈക്രോഫോണും സ്പീക്കറുകളും പരിശോധിക്കുക",
-	"Test mic": "മൈക്ക് പരിശോധിക്കുക",
+	"Test Mic": "മൈക്ക് പരിശോധിക്കുക",
 	"Test Speakers": "സ്പീക്കർ പരിശോധിക്കുക",
 	"Recording for 5 seconds": "Recording for 5 seconds",
 	"Recording for 4 seconds": "Recording for 4 seconds",
