--- a/locales/te.json
+++ b/locales/te.json
@@ -136,7 +136,7 @@
 	"Quick Tips": "చిట్కాలు",
 	"Read once <b>before recording it</b>": "రికార్డ్ చేసే ముందు ఒకసారి చదవండి",
 	"Test your Microphone and Speakers": "దయచేసి మీ మైక్రోఫోన్   మరియు స్పీకర్లను పరీక్ష చెయ్యండి",
-	"Test mic": "మీ మైక్ను  పరీక్ష చెయ్యండి",
+	"Test Mic": "మీ మైక్ను  పరీక్ష చెయ్యండి",
 	"Test Speakers": "స్పీకర్ను పరీక్ష చెయ్యండి",
 	"Please test your <b>speakers</b>": "దయచేసి మీ <b>స్పీకర్లను</b> పరీక్ష చెయ్యండి",
 	"You are a champion": "మీరు విజేత",
