--- a/locales/pa.json
+++ b/locales/pa.json
@@ -164,7 +164,7 @@
 	"Quick Tips": "ਕਵਿੱਕ ਨੁਕਤੇ",
 	"Read once <b>before recording it</b>": "ਰਿਕਾਰਡ ਕਰਨ ਤੋਂ ਪਹਿਲਾਂ ਇੱਕ ਵਾਰ ਜ਼ਰੂਰ ਪੜ੍ਹੋ",
 	"Test your Microphone and Speakers": "ਆਪਣੇ ਮਾਈਕਰੋਫ਼ੋਨ ਅਤੇ ਸਪੀਕਰਾਂ ਦੀ ਜਾਂਚ ਕਰੋ",
-	"Test mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
+	"Test Mic": "ਮਾਈਕ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Test Speakers": "ਸਪੀਕਰ ਦੀ ਜਾਂਚ ਕਰੋ",
 	"Recording for 5 seconds": "Recording for 5 seconds",
 	"Recording for 4 seconds": "Recording for 4 seconds",
