--- a/locales/hi.json
+++ b/locales/hi.json
@@ -183,7 +183,7 @@
 	"Thank You": "Thank You",
 	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.",
 	"Speak": "बोलें",
-	"Validate What They Say": "जो लिखा है क्या वही कहा जा रहा है ?",
+	"Validate What They Say": "पुष्टि करें: जो लिखा है क्या वही कहा जा रहा है ?",
 	"Help us by validating the recordings that others have contributed": "दूसरे लोगों ने जो आवाज़ के नमूनों का योगदान किया है उनकी पुष्टि करने में हमारी मदद करें",
 	"Bolo India: A crowdsourcing initiative for Indian languages": "बोलो इंडिया: भारतीय भाषाओं के लिए एक क्राउडसोर्सिंग पहल ",
 	"India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.": "भारतीय भाषाओं में बोली पहचान के क्षेत्र में भारत को आत्मनिर्भर बनने की ज़रूरत है। इसलिए, हम कई प्रकार की भारतीय आवाज़ों का एक ओपन डेटा रिपॉज़िटरी बनाना चाहते हैं। इस मकसद को पूरा करने के लिए, \"बोलो इंडिया\" आपको अपनी आवाज़ का योगदान देने के लिए आमंत्रित करता है।",
