| Priyanshu | changed translation for listen in hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -6,7 +6,7 @@
 	"Say": "बोलिये",
 	"Contribute Your Voice": "अपनी आवाज़ का योगदान दें",
 	"Contribute your voice to create an open data repository of Indian languages": "भारतीय भाषाओं के विशाल डाटा संग्रह के लिए अपनी आवाज़ का योगदान दें",
-	"Listen": "सुनिए",
+	"Listen": "सुनें",
 	"Verify What They Say": "प्रमाणित करिए, क्या कहा जा रहा है",
 	"Help us by validating the voice samples that others have contributed": "दूसरों द्वारा दिए गए आवाज़ों के नमूनों को प्रमाणित करने में हमारी मदद करें",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "वाक्यांश : भारतीय भाषाओं के लिए एक जन-संकुल स्रोत पहल",
