| Priyanshu | added translation for report in hindi

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -169,18 +169,18 @@
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "अपनी भाषा के लिए 100 घंटों का लक्ष्य हासिल करने में मदद करें। हमें पता है कि आप और भी बहुत कुछ कर सकते हैं!",
 	"Help your own language": "अपनी भाषा को उन्नत बनाने में मदद करें",
 	"Please test your <b>speakers</b>": "कृपया अपने <b>स्पीकर</b> चेक करें",
-	"Report": "Report",
-	"Report Content": "Report Content",
-	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
-	"Offensive": "Offensive",
-	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
-	"Prohibited Content": "Prohibited Content",
-	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
-	"Political Statement": "Political Statement",
-	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
-	"Misinformation": "Misinformation",
-	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
-	"Thank You": "Thank You",
+	"Report": "शिकायत करें",
+	"Report Content": "कॉन्टेंट की शिकायत करें",
+	"Help us understand what’s wrong with the sentence": "इस वाक्य क्या गलत है, इसे समझने में हमारी मदद करें",
+	"Offensive": "अपमानजनक",
+	"Hurting sentiments of religion, community or abusive content etc.": "धर्म, समुदाय की भावनाओं को ठेस पहुँचाने वाला या बुरे बर्ताव वाला कॉन्टेंट",
+	"Prohibited Content": "ऐसा कॉन्टेंट जिस पर पाबंदी लगी है",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "नफ़रत फ़ैलाने वाली / भेदभाव करने वाली / अश्लील भाषा, नशीली दवाओं का प्रचार आदि",
+	"Political Statement": "राजनीतिक बयान",
+	"Hateful Political views, amplifying hate-speech etc.": "नफ़रत फ़ैलाने वाली राजनीतिक सोच, नफ़रत बढ़ाने वाली बोली आदि",
+	"Misinformation": "गलत जानकारी",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "पाखंड / अफवाहें, जानबूझकर बताए गए झूठे तथ्य आदि",
+	"Thank You": "धन्यवाद",
 	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.",
 	"Speak": "बोलें",
 	"Validate What They Say": "पुष्टि करें: जो लिखा है क्या वही कहा जा रहा है ?",
@@ -203,5 +203,9 @@
 	"Test Mic": "माइक की जांच करें",
 	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
-	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>"
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
+	"Low/No Ambient Noise": "Low/No Ambient Noise",
+	"Ambient Noise Detected": "एंबियंस में शोर सुनाई दिया",
+	"Please specify the reason (Optional)": "कृपया कारण बताएं (वैकल्पिक)",
+	"SUBMIT": "सबमिट करें"
 }
