--- a/locales/en.json
+++ b/locales/en.json
@@ -239,5 +239,7 @@
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
 	"Low/No Ambient Noise": "Low/No Ambient Noise",
-	"Ambient Noise Detected": "Ambient Noise Detected"
+	"Ambient Noise Detected": "Ambient Noise Detected",
+	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
+	"SUBMIT": "SUBMIT"
 }
