| Priyanshu | change disable feedback option  from footer

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -222,5 +222,6 @@
 	"Transgender - She": "Transgender - She",
 	"Rather Not Say": "Rather Not Say",
 	"Quick Tips": "দ্রুত টিপস",
-	"Read once <b>before recording it</b>": "এটি রেকর্ড করার আগে একবার পড়ুন"
+	"Read once <b>before recording it</b>": "এটি রেকর্ড করার আগে একবার পড়ুন",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
