--- a/locales/mnibn.json
+++ b/locales/mnibn.json
@@ -119,5 +119,6 @@
 	"Match the voice to the text <b>accurately</b>": "ভোইস অদু টেক্সটকা চপ চান্নহনবীয়ু",
 	"If you are unsure of the match, skip the particular voice sample": "করিগুম্বা অদোম্না চান্নদ্রে হায়না চিংনরবদি, ভোইস সেম্পল অদু কান্থোকপীয়ু",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
-	"Help your own language": "Help your own language"
+	"Help your own language": "Help your own language",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
