--- a/locales/mnimm.json
+++ b/locales/mnimm.json
@@ -3,5 +3,6 @@
   "hrs recorded in": "%hours hrs recorded in %language",
   "hrs validated in": "%hours hrs validated in %language",
   "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
-  "Help your own language": "Help your own language"
+  "Help your own language": "Help your own language",
+  "Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
