--- a/locales/pa.json
+++ b/locales/pa.json
@@ -211,5 +211,6 @@
 	"Misinformation": "Misinformation",
 	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
 	"Thank You": "Thank You",
-	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us."
+	"Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.": "Your feedback helps us keep the portal relevant to you, we appreciate you taking time to leave feedback for us.",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
