--- a/locales/satdv.json
+++ b/locales/satdv.json
@@ -120,5 +120,6 @@
 	"Match the voice to the text <b>accurately</b>": "ओनोल रे साडे <b>सुही</b> मिलाव मे",
 	"If you are unsure of the match, skip the particular voice sample": "जुदी आम मिलाव बाम निससटाया, बिसेस साडे नामुना आड़ाक् काक् मे",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
-	"Help your own language": "Help your own language"
+	"Help your own language": "Help your own language",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
