--- a/locales/ur.json
+++ b/locales/ur.json
@@ -165,5 +165,6 @@
 	"seconds": "سیکنڈ",
 	"You have contributed <b><span id=\"user-contribution\"></span></b><b><span> recordings</span></b> of your voice": "مبارک ہو ! آپ نے آواز کے نمونوں کے گروپ کی تصدیق کردی ہیں!",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>",
-	"Help your own language": "Help your own language"
+	"Help your own language": "Help your own language",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
