--- a/locales/kn.json
+++ b/locales/kn.json
@@ -164,5 +164,6 @@
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
 	"Playing": "ನುಡಿಸುವಿಕೆ",
-	"Help your own language": "ನಿಮ್ಮ ಸ್ವಂತ ಭಾಷೆಗೆ ಸಹಾಯ ಮಾಡಿ"
+	"Help your own language": "ನಿಮ್ಮ ಸ್ವಂತ ಭಾಷೆಗೆ ಸಹಾಯ ಮಾಡಿ",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
