--- a/locales/te.json
+++ b/locales/te.json
@@ -155,5 +155,6 @@
 	"Recording for 1 seconds": "Recording for 1 second",
 	"Playingback Audio": "Playingback Audio",
 	"Playing": "ప్లే అవుతోంది",
-	"Help your own language": "మీ స్వంత భాష సహాయం"
+	"Help your own language": "మీ స్వంత భాష సహాయం",
+	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences"
 }
