--- a/locales/hi.json
+++ b/locales/hi.json
@@ -217,5 +217,7 @@
 	"Your feedback helps us keep the initiative relevant, we appreciate you taking time to leave the feedback.": "आपकी प्रतिक्रिया हमें \"बोलो इंडिया\" को प्रासंगिक बनाए रखने में मदद करती है, प्रतिक्रिया छोड़ने के लिए हम आपकी सराहना करते हैं।",
 	"Back to Home": "वापिस होम पेज पर",
 	"Subject": "Subject",
-	"Description": "Description"
+	"Description": "Description",
+	"social sharing text with rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। \"बोलो इंडिया\" पर हमारी %language भाषा का रैंक %rank है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
+	"social sharing text without rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?"
 }
