--- a/locales/en.json
+++ b/locales/en.json
@@ -238,13 +238,14 @@
 	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
 	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
 	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
-	"Low/No Ambient Noise": "Low/No Ambient Noise",
-	"Ambient Noise Detected": "Ambient Noise Detected",
 	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
 	"SUBMIT": "SUBMIT",
 	"Congratulations!!! You have completed this batch of sentences": "Congratulations!!! You have completed this batch of sentences",
 	"Most data recorded for <span id=\"languageId\"></span>": "Most data recorded for <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
-	"social sharing text with rank":"I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Our %language language ranks $rank on BoloIndia. Do your bit and empower the language?`",
-	"social sharing text without rank": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?`"
+	"social sharing text with rank": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Our %language language ranks $rank on BoloIndia. Do your bit and empower the language?`",
+	"social sharing text without rank": "I've contributed towards building open language repository for India on https://boloindia.nplt.in You and I can make a difference by donating our voices that can help machines learn our language and interact with us through great linguistic applications. Do your bit and empower the language?`",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "Background Noise Detected"
 }
