| Priyanshu | change first two paragraphs of about us page

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -79,7 +79,7 @@
 	"Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.": "Vakyansh has been envisioned to meet a goal of approx. 10,000 hours of diversified Indian voices.",
 	"A contribution of 30-45 mins voice per speaker can make Vakyansh come closer to it’s vision.": "आपकी आवाज़ का 30 से 45 मिनट के योगदान से वाक्यांश विविध  आवाज़ों के विशाल आधार-सामाग्री संग्रह बना सकता है।",
 	"We know you can do more!": "हम जानते हैं कि आप और भी अधिक कर सकते हैं!",
-	"Contribute More": "अधिक योगदान दें।",
+	"Contribute More": "अधिक योगदान दें",
 	"Share it with your friends and family": "इसे अपने दोस्तों और परिवार के साथ शेयर करें",
 	"Come Back again to<br />hit your goalpost": "अपने लक्ष्य को पूरा करने<br />के लिए वापस आएं",
 	"Terms and Conditions": "नियम एवं शर्तें",
@@ -147,7 +147,7 @@
 	"Transgender - She": "ट्रांसजेंडर - महिला",
 	"Rather Not Say": "बताना नहीं चाहते",
 	"By proceeding ahead you agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions</a>": "आगे बढ़ते हुए, आप हमारे <a href=\"/terms-and-conditions\">नियम और शर्तों</a> से सहमत होते हैं",
-	"Feedback": "Feedback",
+	"Feedback": "प्रतिक्रिया",
 	"Quick Tips": "झटपट सलाह",
 	"Read once <b>before recording it</b>": "रिकॉर्ड करने से पहले पढ़ें",
 	"Test your Microphone and Speakers": "अपने माइक्रोफ़ोन और स्पीकर की जांच करें",
@@ -201,9 +201,9 @@
 	"Gender Distribution": "लैंगिक ब्यौरा",
 	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "बोली पहचान \"मशीन-लर्निंग\" टेक्नोलॉजी पर निर्भर करती है, जिसके लिए डेटासेट के विशाल संग्रह की ज़रूरत होती है, जिसमें विविध भारतीय आवाज़ें और उनसे जुड़े टेक्स्ट शामिल हों। \"बोलो इंडिया\" के ज़रिए, हम भारतीय भाषा बोलने वाली भारतीय आवाज़ों का एक विविध ओपन रिपॉज़िटरी बनाना चाहते हैं, जिसका इस्तेमाल इस पहल के लिए किया जा सके।",
 	"Test Mic": "माइक की जांच करें",
-	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
-	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
-	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
+	"Thank you for your enthusiasm to validate the recordings.": "पूरे उत्साह से रिकॉर्डिंग की पुष्टि करने के लिए आपका धन्यवाद।",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "हमारे पास <span id=\"spn-validation-language\"></span> भाषा में कोई डेटा उपलब्ध नहीं है। कृपया बाद में फिर से कोशिश करें।",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> में योगदान देना शुरू करें",
 	"Low/No Ambient Noise": "Low/No Ambient Noise",
 	"Ambient Noise Detected": "एंबियंस में शोर सुनाई दिया",
 	"Please specify the reason (Optional)": "कृपया कारण बताएं (वैकल्पिक)",
@@ -216,8 +216,10 @@
 	"Thank You for your valueable feedback": "आपके बहुमूल्य प्रतिक्रिया के लिए शुक्रिया",
 	"Your feedback helps us keep the initiative relevant, we appreciate you taking time to leave the feedback.": "आपकी प्रतिक्रिया हमें \"बोलो इंडिया\" को प्रासंगिक बनाए रखने में मदद करती है, प्रतिक्रिया छोड़ने के लिए हम आपकी सराहना करते हैं।",
 	"Back to Home": "वापिस होम पेज पर",
-	"Subject": "Subject",
-	"Description": "Description",
+	"Subject": "विषय",
+	"Description": "विवरण",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
 	"social sharing text with rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। \"बोलो इंडिया\" पर हमारी %language भाषा का रैंक %rank है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?",
 	"social sharing text without rank": "मैंने https://boloindia.nplt.in पर भारत के लिए ओपन लैंग्वेज रिपॉज़िटरी बनाने में योगदान किया है। आप और मैं हमारी आवाज़ों का योगदान करके इस पहल में काफ़ी फ़र्क डाल सकते हैं जिससे मशीन को हमारी भाषा सीखने में मदद मिलती है। अपनी भाषा को सशक्त बनाने में अपना योगदान देना चाहेंगे?"
 }
